<resources>
    <string name="app_name" translatable="false">OCARA</string>
    <string name="app_version" translatable="false">V1.0.0</string>
    <string name="audit_name">Audit Name : *</string>
    <string name="site">Site : (*)</string>
    <string name="siteLabel" translatable="false">Site</string>
    <string name="edit_audit_level_beginner">novice</string>
    <string name="edit_audit_level_expert">expert</string>
    <string name="show_less">show less</string>
    <string name="Help_on_the_page">Help on the page</string>
    <string name="view_referentials">View referentials</string>
    <string name="view_referentials_fragment_title">Referentials</string>
    <string name="referentials_info">Referential info</string>
    <string name="referentials">Referentials</string>
    <string name="preferences">Preferences</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="terms_of_use_title">Terms of Use</string>
    <string name="terms_of_use_intro_title">OCARA - Terms of Use</string>
    <string name="terms_of_use_intro_accept">Accept the GCU</string>
    <string name="terms_of_use_intro_refuse">Refuse the GCU</string>
    <string name="about">About</string>
    <string name="choose_site">choose site</string>
    <string name="add_site">Add site</string>
    <string name="street">Address</string>
    <string name="city">City</string>
    <string name="postal_code">Postal code (5 digits) :</string>
    <string name="create_site">Create site</string>
    <string name="site_info">Site info</string>
    <string name="modify_site">Edit site</string>
    <string name="modify_auditor">Edit auditor</string>
    <string name="create_auditor">Create auditor</string>
    <string name="name">Name :</string>
    <string name="last_name">Last name :</string>
    <string name="email" translatable="false">Email :</string>
    <string name="inform_me">Inform me of audits carried out</string>
    <string name="add_auditor">Add auditor</string>
    <string name="auditor">Auditor</string>
    <string name="rulesetInDroplistFormat" translatable="false">%s (V%d)</string>
    <string name="rulesetInDroplist_content_desc_downloaded">downloaded</string>
    <string name="rulesetInDroplist_content_desc_not_downloaded">to download</string>
    <string name="name_of_ref">Name of referential</string>
    <string name="type_of_ref">Referential type</string>
    <string name="ref_eq_search_hint">Enter a keyword</string>
    <string name="authorLabel">Author :</string>
    <string name="rule_category">Rule Category :</string>
    <string name="versionLabel">Version number :</string>
    <string name="dateLabel">Publication Date :</string>
    <string name="commentLabel">Comment :</string>
    <string name="view_referetial">View Rules</string>
    <string name="uninstall_ref">Uninstall this referential</string>
    <string name="uninstall">Uninstall</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="name_of_obj">Name of object</string>
    <string name="obj_sub_obj_dialog_tite">Indicate properties present in this element :</string>
    <string name="edit_path">Edit path</string>
    <string name="view_report">View report</string>
    <string name="search_rules">Show rules</string>
    <string name="comments">Comment (%d)</string>
    <string name="details">Details</string>
    <string name="properties">Properties (%d)</string>
    <string name="audit">Audit</string>
    <string name="test">Test</string>
    <string name="next">next</string>
    <string name="valider">validate</string>
    <string name="delete">delete</string>
    <string name="parcours" translatable="false">parcours</string>
    <string name="choice">Choice of Objects</string>
    <string name="object" translatable="false">Object</string>
    <string name="timer" translatable="false">%d:%d</string>
    <string name="speech_to_text">speech to text</string>
    <string name="this_is_an_audio_comment_but_it_has_not_audio">This is an audio comment, but it has no audio</string>
    <string name="delete_comment">Delete Comment ?</string>
    <string name="save">save</string>
    <string name="Copy">Copy</string>
    <string name="sort_by_date">Sort by date</string>
    <string name="sort_by_site">Sort by site</string>
    <string name="sort_by_status">Sort by status</string>
    <string name="reverse">Reverse</string>
    <string name="voir_parcours">see route</string>
    <string name="referential_type" translatable="false">Référentiel : %s</string>
    <string name="auditorName">Auditor : %s</string>
    <string name="date" translatable="false">Date : %s</string>
    <string name="siteName" translatable="false">Site : %s</string>
    <string name="all_profiles">all the profiles</string>
    <string name="commentsCount">Comments (%d)</string>
    <string name="anamoliesCount" translatable="false">Anamolies (%d)</string>
    <string-array name="terms_title_texts">
        <item>@string/terms_general_info_title_txt</item>
        <item>@string/terms_item_1_title_txt</item>
        <item>@string/terms_item2_title_txt</item>
        <item>@string/terms_item3_title_txt</item>
        <item>@string/terms_item4_title_txt</item>
        <item>@string/terms_item5_title_txt</item>
        <item>@string/terms_item6_title_txt</item>
        <item>@string/terms_item7_title_txt</item>
        <item>@string/terms_item8_title_txt</item>
        <item>@string/terms_item9_title_txt</item>
        <item>@string/terms_item10_title_txt</item>
        <item>@string/terms_item11_title_txt</item>
    </string-array>
    <string-array name="terms_content_texts">
        <item>@string/terms_general_info_context_txt</item>
        <item>@string/terms_item1_content_txt</item>
        <item>@string/terms_item2_content_txt</item>
        <item>@string/terms_item3_content_txt</item>
        <item>@string/terms_item4_content_txt</item>
        <item>@string/terms_item5_content_txt</item>
        <item>@string/terms_item6_content_txt</item>
        <item>@string/terms_item7_content_txt</item>
        <item>@string/terms_item8_content_txt</item>
        <item>@string/terms_item9_content_txt</item>
        <item>@string/terms_item10_content_txt</item>
        <item>@string/terms_item11_content_txt</item>
    </string-array>
    <string name="terms_title_txt" translatable="false">CONDITIONS GÉNÉRALES D\'UTILISATION DE L\'APPLICATION OCARA</string>
    <string name="terms_general_info_title_txt" translatable="false"><b>INFORMATIONS GÉNÉRALES</b></string>
    <string name="terms_general_info_context_txt" translatable="false">L\'application « OCARA» est un outil d\’audit matérialisé par une interface pour terminal  Android(tablette ou smartphone),
        permettant de décrire et d\’auditer  l\’accessibilité et/ou la sécurité des parcours des usagers à l\’intérieur de tout
        bâtiment ou en extérieur (ci-après dénommée « Application »).\n

    L\'Application est proposée par la société Orange, une société anonyme au capital social de 10 640 226 396 €, immatriculée au RCS de Paris sous le numéro 380 129 866,
        dont le siège social est situé au 78 rue Olivier de Serres, 75015 Paris, France (ci-après dénommée « Orange »).\n
    L\'Application est disponible librement, gratuitement, en la téléchargeant sur github  via le lien
       https://github.com/Orange-OpenSource/OCARA <a href="https://github.com/Orange-OpenSource/OCARA" />, à toute personne, (ci-après dénommée Auditeur) souhaitant utiliser l\’Application aux fins de décrire et
        d\’auditer l\’accessibilité et la sécurité du parcours des usagers à l\’intérieur de tout  bâtiment ou en extérieur.\n
    L\'accès et l\'utilisation de l\'Application sont soumises aux présentes Conditions Générales d\'Utilisation (ci-après dénommées « CGU ») que
        l\'Auditeur déclare avoir lues et accepte expressément en cochant la case « acceptation » correspondante.
    </string>
    <string name="terms_item_1_title_txt" translatable="false"><b>Article Premier : OBJET</b></string>
    <string name="terms_item1_content_txt" translatable="false">
    Les présentes CGU ont pour objet de définir les conditions selon lesquelles :\n

    • l\'Application est mise à la disposition des Auditeurs ;\n
    • les Auditeurs doivent utiliser l\'Application.
    </string>
    <string name="terms_item2_title_txt" translatable="false"><b>Article 2 : ACCÈS À L\'APPLICATION</b></string>
    <string name="terms_item2_content_txt" translatable="false">
Pour pouvoir utiliser l\'Application, l\'Auditeur doit disposer d\'une tablette ou d\’un smartphone compatible avec les systèmes d\'exploitation Android version 6 minimum (et ses versions ultérieures) et télécharger l\'Application via le lien <a href="https://github.com/Orange-OpenSource/OCARA" />.\n
L’utilisation du service OCARA nécessite une connexion à Internet pour télécharger les contenus (référentiels d’audits, dits aussi jeux de règles) permettant d’effectuer des audits. Il est précisé que ces connexions ne sont pas prises en charge par Orange, il appartient par conséquent à l’Auditeur de souscrire préalablement à une offre Internet  (incluant 50 Mo minimum) pour pouvoir utiliser le service OCARA.</string>
    <string name="terms_item3_title_txt" translatable="false"><b>Article 3 : DESCRIPTION DE L\'APPLICATION</b></string>
    <string name="search">Search</string>
    <string name="search_name">Search</string>
    <string name="create_auditor_name">Name</string>
    <string name="create_auditor_lastname">Last Name</string>
    <string name="create_auditor_email">E-mail</string>
    <string name="fill_mail_error_title">Invalid e-mail address.\nExample : melanie@orange.fr</string>
    <string name="fill_mail_hint">Expected format: name@domain.com</string>
    <string name="fill_field_error_title">Please complete this field.</string>
    <string name="close_content_desc">Close</string>
    <string name="obj_list_delete_content_desc">delete an element of the route</string>
    <string name="obj_list_edit_content_desc">change order of objects of the route</string>
    <string name="delete_content_desc">delete an element of the route</string>
    <string name="edit_content_desc">change order of objects of the route </string>
    <string name="content_desc_sort">Sort</string>
    <string name="content_desc_edit_photo">edit the photo </string>
    <string name="content_desc_delete_auditor">Delete the auditor</string>
    <string name="content_desc_edit_auditor">Modify the auditor</string>
</resources>